--- a/samples/KristofferStrube.Blazor.FileSystem.WasmExample/_Imports.razor
+++ b/samples/KristofferStrube.Blazor.FileSystem.WasmExample/_Imports.razor
@@ -4,4 +4,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using KristofferStrube.Blazor.FileAPI
+@using KristofferStrube.Blazor.FileSystem
 @using KristofferStrube.Blazor.FileSystem.WasmExample
+@using KristofferStrube.Blazor.FileSystem.WasmExample.Shared
