--- a/samples/KristofferStrube.Blazor.FileSystem.WasmExample/wwwroot/css/app.css
+++ b/samples/KristofferStrube.Blazor.FileSystem.WasmExample/wwwroot/css/app.css
@@ -1,5 +1,47 @@
+﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+
+html {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+html, body, #app, .page, main {
+    height: 100%;
+}
+
+.body-article {
+    height: calc(100% - 56px);
+    padding-bottom:1.1rem;
+    overflow-y:scroll;
+}
+
 h1:focus {
     outline: none;
+}
+
+a, .btn-link {
+    color: #0071c1;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
+}
+
+.content {
+    padding-top: 1.1rem;
+}
+
+.valid.modified:not([type=checkbox]) {
+    outline: 1px solid #26b050;
+}
+
+.invalid {
+    outline: 1px solid red;
+}
+
+.validation-message {
+    color: red;
 }
 
 #blazor-error-ui {
