Better format in demo text.

--- a/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Pages/Index.razor
+++ b/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Pages/Index.razor
@@ -15,7 +15,7 @@
 </p>
 <p>
     Below we see a sample of a file called <code>file.txt</code> that has been opened from your <b>Origin Private File System</b>. The file is local to this domain in your browser, but is persisted accross page loads.
-    <nobr>Try writing in the textarea and then <a @onclick="Reload" href="">reload this page.</a></nobr>
+    Try writing in the textarea and then <nobr><a @onclick="Reload" href="">reload this page.</a></nobr>
 </p>
 
 @if (text is not null)
