Removed wrong title word

--- a/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Pages/Index.razor
+++ b/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Pages/Index.razor
@@ -3,7 +3,7 @@
 @inject IStorageManagerService StorageManagerService
 @inject NavigationManager NavigationManager
 
-<PageTitle>File System Access - Minimal Viable Example</PageTitle>
+<PageTitle>File System - Minimal Viable Example</PageTitle>
 
 <h2>Minimal Viable Example</h2>
 <p>
