More naming changes.

--- a/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Pages/Status.razor
+++ b/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Pages/Status.razor
@@ -5,7 +5,7 @@
 @inject HttpClient HttpClient
 @inject IJSRuntime JSRuntime
 
-<PageTitle>File System Access - Status</PageTitle>
+<PageTitle>File System - Status</PageTitle>
 
 @if (compareText is not null)
 {
