--- a/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Shared/NavMenu.razor
+++ b/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Shared/NavMenu.razor
@@ -15,6 +15,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="SearchMastodon">
+                <span class="oi oi-signpost" aria-hidden="true"></span> Search Mastodon
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="Status">
                 <span class="oi oi-warning" aria-hidden="true"></span> API Coverage Status
             </NavLink>
