--- a/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Shared/NotePresenter.razor
+++ b/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Shared/NotePresenter.razor
@@ -1,6 +1,6 @@
 ﻿@using KristofferStrube.ActivityStreams;
 
-<div style="border:solid #ddd 1px; border-radius:5px;margin-top:10px;padding:10px;max-width:100%;">
+<div style="border:solid #ddd 1px; border-radius:5px;margin-top:10px;padding:10px;max-width:100%;display:flex;flex-direction:column;">
     <div style="display:flex;flex-direction:row;">
         @if (Note.AttributedTo?.First() is Person profile)
         {
@@ -31,6 +31,12 @@
         }
     </div>
     @((MarkupString)(Note.Content!.First()))
+    @if (Note.Attachment?.FirstOrDefault(attactment => attactment is Document && attactment.MediaType?.StartsWith("image") is true) is Document { } image && image.Url?.FirstOrDefault() is Link { Href: { } imageHref })
+    {
+        <div style="display:flex;justify-content:center;">
+            <img src="@imageHref" style="height:300px;max-width:100%;" alt="@image.Name?.First()" />
+        </div>
+    }
     <small><i><a style="color:grey" href="@Note.Id">Open on mastodon</a></i></small>
 </div>
 
