Clear search when downloading new user.

--- a/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Pages/SearchMastodon.razor
+++ b/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Pages/SearchMastodon.razor
@@ -122,6 +122,7 @@
         notes = Array.Empty<Note>();
         suffixTrees = new();
         downloading = false;
+        search = "";
 
         if (string.IsNullOrWhiteSpace(profile))
         {
