--- a/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Pages/SearchMastodon.razor
+++ b/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Pages/SearchMastodon.razor
@@ -18,7 +18,7 @@
     This sample page uses <a href="https://github.com/KristofferStrube/Blazor.FileSystem">Blazor.FileSystem</a> together with <a href="https://github.com/KristofferStrube/ActivityStreams">KristofferStrube/ActivityStream</a> to load a Mastodon user's posts, create search trees of their content, and store these search trees in the <b>Origin Private File System</b> so that they can be re-used on reloads or recurring searches.
 </p>
 <p>
-    The <a href="https://fs.spec.whatwg.org/">File System API</a> is only supported on few browsers currently, but most major vendors have committed to support it in the near future. So you might need to install alpha/beta release of your browser for this to work.
+    The <a href="https://fs.spec.whatwg.org/">File System API</a> is only supported on few browsers, but most major vendors have committed to support it in the near future. So you might need to install alpha/beta release of your browser for this to work.
     <br />
     <small style="color:grey;">(This is the case for Chrome on mobile devices.)</small>
 </p>
